--- a/Choreography_Dev/.classpath
+++ b/Choreography_Dev/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/MattOffringa/Desktop/controlsfx-8.0.6_20/controlsfx-8.0.6_20.jar"/>
+	<classpathentry kind="lib" path="R:/School/GVSU Senior/Senior Project/controlsfx-8.0.6_20.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
