--- a/Choreography_Dev/bin/.gitignore
+++ b/Choreography_Dev/bin/.gitignore
@@ -76,6 +76,8 @@ Choreography_Dev/nbproject/private/profiler/configurations.xml
 *.properties
 
 Choreography_Dev/nbproject/jfx-impl.xml
-/SimpleJavaFXPlayer/
-/application/
-/choreography/
+/resources
+/choreography
+/.gitignore
+/SimpleJavaFXPlayer
+/application
