Undo Water Commands vis Scrolling
I think we need a second timline which saves all states instead of just
changes....

--- a/Choreography_Dev/bin/.gitignore
+++ b/Choreography_Dev/bin/.gitignore
@@ -76,5 +76,8 @@ Choreography_Dev/nbproject/private/profiler/configurations.xml
 *.properties
 
 Choreography_Dev/nbproject/jfx-impl.xml
+/.gitignore
+/SimpleJavaFXPlayer/
+/application/
 /choreography/
 /resources/
